--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,9 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <jvmArguments>-Duser.timezone=Asia/Kolkata</jvmArguments>
+        </configuration>
       </plugin>
     </plugins>
   </build>
